--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,9 @@ html, body {
 li {
     list-style-type: none;
     margin: 0;
-	padding: 0;
 	display: inline;
 	float: right;
+	display: block;
+    padding: 8px;
+    background-color: #dddddd;
 }
